trying to fix navbar

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <div class="fixed-top" id="stickynav">
         <div class="d-flex justify-content-between" id="navscroll">
             <div class="p-2">
-                <date id="datenav">Thu, Oct 03, 2019</date>
+                <div class="datenav">Thu, Oct 03, 2019</div>
             </div>
             <div class="p-2" id="signin">
                 <span>SIGN IN</span><a href="#" id="signinA">SUBSCRIBE <i class="fas fa-chevron-right" id="shevron"></i></a>
@@ -24,7 +24,7 @@
             </div>
         </div>
 
-        <div class="logoimg" id="biglogoid"><img src="images/newsweek-logo.png"></div>
+        <div class="logoimg" id="biglogoid"><img src="images/newsweek-logo.png" alt="logo"></div>
     </div>
 
     <nav class="header-bottom" id="navbottom">
@@ -118,7 +118,7 @@
                             <div class="wrap">
                                 <a><img src="images/image_01_fullscreen.8a9dcafb.jpg" class="img-fluid" alt="Responsive image"><span class="pic-on">SPONSORED INSIGHT</span></a>
                             </div>
-                            <div class="article-info" id="sponsored">
+                            <div class="article-info sponsored">
                                 <h3>ZENITH'S DEFY INVENTOR IS REVOLUTIONIZING MECHANICAL WATCHMAKING</h3>
                                 <div class="summary">The new Zenith Defy Inventor showcases the groundbreaking Zenith Oscillator control system, which replaces the traditional sprung balance that’s been the standard for over three centuries.</div>
                             </div>
@@ -128,7 +128,7 @@
                             <div class="wrap">
                                 <a><img src="images/tjhprofilenewsweek.jpg" class="img-fluid" alt="Responsive image"><span class="pic-on">SPONSORED INSIGHT</span></a>
                             </div>
-                            <div class="article-info" id="sponsored">
+                            <div class="article-info sponsored">
                                 <h3>Law Firms: Fighting for a Noble Cause</h3>
                                 <div class="summary">Attorneys are an essential component of modern American society. But who leads the field?</div>
                             </div>
@@ -153,50 +153,50 @@
                     </div>
                     <div class="featured sticky-top">
                         <div class="block-title">MORE STORIES</div>
-                        <div class="clearfix" id="more-stories-part">
-                            <div id="image"><img src="images/israel-netanyahu-settlements-west-bank.jpg" class="img-fluid"></div>
+                        <div class="clearfix more-stories-part">
+                            <div class="image"><img src="images/israel-netanyahu-settlements-west-bank.jpg" class="img-fluid" alt="img"></div>
                             <h6>Israel’s Future: Will Netanyahu Annex the Settlements?</h6>
                             <div class="summary">“I will make sure we control the territory west of Jordan,” Israeli Prime Minister Benjamin Netanyahu said in the run-up to the election.</div>
                         </div>
 
-                        <div class="clearfix" id="more-stories-part">
-                            <div id="image"><img src="images/u.s.-gdp-data-q1-bea.jpg" class="img-fluid"></div>
+                        <div class="clearfix more-stories-part">
+                            <div class="image"><img src="images/u.s.-gdp-data-q1-bea.jpg" class="img-fluid" alt="img"></div>
                             <h6>U.S. Economy ‘Undeniably Cooling’ Despite GDP Growth</h6>
                             <div class="summary">U.S. gross domestic product for Q1 surprised analysts with its strength, but they warn the data beneath the headline tells a different story.</div>
                         </div>
 
-                        <div class="clearfix" id="more-stories-part">
-                            <div id="image"><img src="images/gettyimages-1091135648_0.jpg" class="img-fluid"></div>
+                        <div class="clearfix more-stories-part">
+                            <div class="image"><img src="images/gettyimages-1091135648_0.jpg" class="img-fluid" alt="img"></div>
                             <h6>Russia Welcomes Trump's Wish to ‘Get Rid’ of All Nukes</h6>
                             <div class="summary">Russia had been closely watching recent reports that the White House was studying a comprehensive deal that would include China, but Moscow was also hoping for a promise to never use nuclear weapons.</div>
                         </div>
 
-                        <div class="clearfix" id="more-stories-part">
-                            <div id="image"><img src="images/gettyimages-1131072454-594x594.jpg" class="img-fluid"></div>
+                        <div class="clearfix more-stories-part">
+                            <div class="image"><img src="images/gettyimages-1131072454-594x594.jpg" class="img-fluid" alt="img"></div>
                             <h6>Biden on Anita Hill: I Don’t Think I Treated Her Badly</h6>
                             <div class="summary">“I’m sorry she was treated the way she was treated,” Joe Biden said of Anita Hill during an interview on “The View” on Friday.</div>
                         </div>
 
-                        <div class="clearfix" id="more-stories-part">
-                            <div id="image"><img src="images/trump-charlottesville-reobert-e.-lee-great.jpg" class="img-fluid"></div>
+                        <div class="clearfix more-stories-part">
+                            <div class="image"><img src="images/trump-charlottesville-reobert-e.-lee-great.jpg" class="img-fluid" alt="img"></div>
                             <h6>Donald Trump Calls Robert E. Lee a 'Great General'</h6>
                             <div class="summary">"Whether you like it or not, he was one of the great generals," Trump said.</div>
                         </div>
 
-                        <div class="clearfix" id="more-stories-part">
-                            <div id="image"><img src="images/gettyimages-1132002876_0.jpg" class="img-fluid"></div>
+                        <div class="clearfix more-stories-part">
+                            <div class="image"><img src="images/gettyimages-1132002876_0.jpg" class="img-fluid" alt="img"></div>
                             <h6>Russia: Time Running Out for Syria's Last Rebels</h6>
                             <div class="summary">Russia is growing impatient with the persistent presence of jihadis in Syria's northwestern Idlib Province.</div>
                         </div>
 
-                        <div class="clearfix" id="more-stories-part">
-                            <div id="image"><img src="images/gettyimages-1074976226.jpg" class="img-fluid"></div>
+                        <div class="clearfix more-stories-part">
+                            <div class="image"><img src="images/gettyimages-1074976226.jpg" class="img-fluid" alt="img"></div>
                             <h6>Trump, Abe to Discuss North Korea Denuclearization</h6>
                             <div class="summary">The talks will be aimed at achieving the final fully verified denuclearization of North Korea, a senior administration official said Thursday.</div>
                         </div>
 
-                        <div class="clearfix" id="more-stories-part">
-                            <div id="image"><img src="images/democrats-probe-dhs-oustings-stephen-miller.jpg" class="img-fluid"></div>
+                        <div class="clearfix more-stories-part img-fluid">
+                            <div class="image"><img src="images/democrats-probe-dhs-oustings-stephen-miller.jpg" alt="img"></div>
                             <h6>Dems Probe DHS Oustings, Trump Aide Refuses to Testify</h6>
                             <div class="summary">The White House has said that the senior policy adviser to Trump is “absolutely immune” from congressional testimony.</div>
                         </div>
@@ -271,50 +271,50 @@
 
                     <div class="featured">
                         <div class="block-title">LATEST NEWS</div>
-                        <div class="clearfix" id="more-stories-part">
-                            <div id="image"><img src="images/gettyimages-849349802.jpg" class="img-fluid"></div>
+                        <div class="clearfix more-stories-part">
+                            <div class="image"><img src="images/gettyimages-849349802.jpg" class="img-fluid" alt="img"></div>
                             <h6>Prime Rib Day: Celebrate At These Top Restaurants</h6>
 
                         </div>
 
-                        <div class="clearfix" id="more-stories-part">
-                            <div id="image"><img src="images/dk-metcalf.jpg" class="img-fluid"></div>
+                        <div class="clearfix more-stories-part">
+                            <div class="image"><img src="images/dk-metcalf.jpg" class="img-fluid" alt="img"></div>
                             <h6>Is WR DK Metcalf's body fat really 1.9 percent?</h6>
 
                         </div>
 
-                        <div class="clearfix" id="more-stories-part">
-                            <div id="image"><img src="images/hot-dog.jpg" class="img-fluid"></div>
+                        <div class="clearfix more-stories-part">
+                            <div class="image"><img src="images/hot-dog.jpg" class="img-fluid" alt="img"></div>
                             <h6>NYC's Mayor Definitely Didn't Just Ban Hot Dogs</h6>
 
                         </div>
 
-                        <div class="clearfix" id="more-stories-part">
-                            <div id="image"><img src="images/measles-vaccination.jpg" class="img-fluid"></div>
+                        <div class="clearfix more-stories-part">
+                            <div class="image"><img src="images/measles-vaccination.jpg" class="img-fluid" alt="img"></div>
                             <h6>Hundreds Quarantined For Exposure To Measles In CA</h6>
 
                         </div>
 
-                        <div class="clearfix" id="more-stories-part">
-                            <div id="image"><img src="images/kids-ii-recall.png" class="img-fluid"></div>
+                        <div class="clearfix more-stories-part">
+                            <div class="image"><img src="images/kids-ii-recall.png" class="img-fluid" alt="img"></div>
                             <h6>700K More Baby Rockers Recalled After Infant Deaths</h6>
 
                         </div>
 
-                        <div class="clearfix" id="more-stories-part">
-                            <div id="image"><img src="images/mississippi-state-flag.jpg" class="img-fluid"></div>
+                        <div class="clearfix more-stories-part">
+                            <div class="image"><img src="images/mississippi-state-flag.jpg" class="img-fluid" alt="img"></div>
                             <h6>Mississippi Flag Banned From New Jersey Park Tradition</h6>
 
                         </div>
 
-                        <div class="clearfix" id="more-stories-part">
-                            <div id="image"><img src="images/23-thor-dark-world-loki.jpg" class="img-fluid"></div>
+                        <div class="clearfix more-stories-part">
+                            <div class="image"><img src="images/23-thor-dark-world-loki.jpg" class="img-fluid" alt="img"></div>
                             <h6>Is Loki Alive In 'Avengers: Endgame?'</h6>
 
                         </div>
 
-                        <div class="clearfix" id="more-stories-part">
-                            <div id="image"><img src="images/gettyimages-1131470712.jpg" class="img-fluid"></div>
+                        <div class="clearfix more-stories-part">
+                            <div class="image"><img src="images/gettyimages-1131470712.jpg" class="img-fluid" alt="img"></div>
                             <h6>Sex Workers Livid About Arrests Linked to Kraft Probe</h6>
 
                         </div>
@@ -328,7 +328,7 @@
                             <div class="wrap">
                                 <a><img src="images/nwtolkien_300x250.jpg" class="img-fluid" alt="Responsive image"><span class="pic-on">SPECIAL EDITION</span></a>
                             </div>
-                            <div class="article-info" id="sponsored">
+                            <div class="article-info sponsored">
                                 <h3>J.R.R. Tolkien: Inside the Mastermind of Middle-Earth</h3>
                                 <div class="summary">Nearly a century ago, J.R.R. Tolkien introduced readers to the world of Middle-Earth, capturing the hearts and minds of generations to come. Explore the man behind The Hobbit and The Lord of the Rings in this new Special Edition: J.R.R.
                                     Tolkien!
@@ -350,7 +350,7 @@
                             <div class="wrap">
                                 <a><img src="images/c75t9359.jpg" class="img-fluid" alt="Responsive image"><span class="pic-on">SPONSORED INSIGHT</span></a>
                             </div>
-                            <div class="article-info" id="sponsored">
+                            <div class="article-info sponsored">
                                 <h3>GLOBAL EDUCATION 2019</h3>
                                 <div class="summary">‘One size fits all’ teaching is a thing of the past. The nurturing of critical thinking is paramount in today’s global student. Where are the leaders of tomorrow studying?
                                 </div>
@@ -988,7 +988,7 @@
                         <div class="part-title red">SUBSCRIBE</div>
                         <div class="items">
                             <div class="item1">
-                                <img src="images/package1.png" class="itemsimg">
+                                <img src="images/package1.png" class="itemsimg" alt="img">
                                 <h3>Digital Only</h3>
                                 <div>
                                     <span class="itemsspan">Free access to 40+ digital editions</span>
@@ -1000,7 +1000,7 @@
                             </div>
 
                             <div class="item2">
-                                <img src="images/package2.png" class="itemsimg">
+                                <img src="images/package2.png" class="itemsimg" alt="img">
                                 <h3>Print & Digital</h3>
                                 <div>
                                     <span class="itemsspan">Weekly magazine, <br>delivered</span>
@@ -1075,7 +1075,7 @@
             <div class="footer-top">
                 <div class="row">
                     <div class="col-md-9 logo-footer">
-                        <img src="images/logo-red.png">
+                        <img src="images/logo-red.png" alt="img">
                         <span class="copyright">© 2019 Newsweek</span>
                     </div>
 
